--- a/install.txt
+++ b/install.txt
@@ -35,4 +35,5 @@ python -c "import tensorflow as tf; print(tf.config.list_physical_devices('GPU')
 ===================================================================
 
 pip install jupyterlab
-
+pip install scikit-learn
+pip install matplotlib
